syntax = "proto3";

package "ledger";

option java_package = "org";
option java_multiple_files = true;
option java_outer_classname = "publicLedgerServer";

service ledgerService {
  rpc ping(ping) returns (ping);
  rpc store(storeRequest) returns (storeResponse);
  rpc findNode(target) returns (stream Nodes);
  rpc findValue(target) returns (stream Values);
}

message ping {
  int64 nodeIP = 1;
  int64 nodePublicPort = 2;
  bytes nodeId = 3;
}

message storeRequest {
  bytes nodeId = 1;
  bytes value = 2;
  int64 timestamp = 3;
}
message storeResponse {
  bytes nodeId = 1;
  int64 timestamp = 2;
  bool result = 3;
}

message target{
  bytes nodeId = 1;
  int64 nodePublicPort = 2;
  int64 nodeIP = 3;
}

message FNodes{
  bytes nodeId = 1;
  string nodeIp = 2;
  int64 port = 3;
  int64 timestamp = 4;
}

message FValues{
  bytes value = 1;
  bool foundValue = 2;

  bytes nodeId = 3;
  string nodeIp = 4;
  int64 port = 5;
  int64 timestamp = 6;
}



